--- a/SpamDetectorClient/css/main.css
+++ b/SpamDetectorClient/css/main.css
@@ -254,3 +254,14 @@ textarea {
   }
 }
 
+#banner{
+  background-color: darkblue;
+}
+
+#body{
+  background-color: orange;
+}
+
+#footer{
+  background-color: red;
+}
